# software-engineering-3.5

./: README.md
comp_inform_networks/: capture7_.pcapng  capture8_.pcapng  capture9_.pcapng
comp_inform_networks/lab10/: client.py  server.py
computer_graphic/lab1/: lab1.pde
computer_graphic/lab2/: lab2.pde
computer_graphic/lab3/lab3/: lab3.pde
data_base_2/: bug_track_to_xml.sql  bug_tracking(xml schema).xsd  bug_tracking.dtd  bug_tracking.xml  bug_tracking_.html  bug_tracking_report.xsl  parallel_t1.sql  parallel_t2.sql  procedures.sql  transaction_1.sql  transaction_2.sql  xquery.txt
parallel_comp/lab1/: main.cpp
parallel_comp/lab2/: main.cpp
parallel_comp/lab3/: main.cpp
parallel_comp/lab4/: main.py
parallel_comp/lab5/: main.cpp
parallel_comp/lab6/: CMakeLists.txt  dijkstra  main.cpp
parallel_comp/lab7/: main.cpp
parallel_comp/lab8/: CMakeLists.txt  jacobi_opencl.cpp
parallel_comp/lab9-10/: CMakeLists.txt  matrix_mpi.c
practice_java/lab1/src/: Task1.java  Task2.java  Task3.java
practice_java/lab2/src/: SpiralGraph.java
practice_java/lab3/: contacts.csv
practice_java/lab3/src/: AddressBook.java
practice_java/lab4/src/: MultiThreadDemo.java
practice_java/lab5/src/: DbBrowserApp.java
